Translate openapi-swaggerui.adoc.po

--- a/l10n/po/ja_JP/_guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_guides/native-and-ssl.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-03-06 09:39+0900\n"
+"PO-Revision-Date: 2022-04-11 15:49+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -110,9 +110,8 @@ msgstr "これは、REST クライアントが SSL REST サービスに接続す
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:44
-#, fuzzy
 msgid "For the purposes of this guide, we also need to remove the configuration that starts the embedded WireMock server that stubs REST client responses so the tests actually propagate calls to the https://stage.code.quarkus.io/api. Update the test file `src/test/java/org/acme/rest/client/ExtensionsResourceTest.java` and remove the line:"
-msgstr "このガイドでは、RESTクライアントの応答をスタブ化する組み込み型のWireMockサーバーを起動する設定を削除して、テストが実際に https://stage.code.quarkus.io/api  への呼び出しを伝播するようにする必要もあります。テストファイル `src/test/java/org/acme/rest/client/ExtensionsResourceTest.java` を更新し、次の行を削除します。"
+msgstr "このガイドの目的から、RESTクライアントの応答をスタブ化する組み込み型のWireMockサーバーを起動する設定を削除して、テストが実際に https://stage.code.quarkus.io/api  への呼び出しを伝播するようにする必要もあります。テストファイル `src/test/java/org/acme/rest/client/ExtensionsResourceTest.java` を更新し、次の行を削除します。"
 
 #. type: delimited block -
 #: upstream/_guides/native-and-ssl.adoc:47
@@ -122,7 +121,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:49
-#, fuzzy
 msgid "from the `ExtensionsResourceTest` class."
 msgstr "`ExtensionsResourceTest` クラスから。"
 
@@ -164,7 +162,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:73
-#, fuzzy
 msgid "The important elements are these 2 options that were automatically added by Quarkus:"
 msgstr "重要なのは、Quarkusによって自動的に追加された以下の2つのオプションです。"
 
@@ -176,7 +173,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:81
-#, fuzzy
 msgid "They enable the native SSL support for your native executable.  But you should not set them manually, we have a nice configuration property for this purpose as described below."
 msgstr "これらは、あなたのネイティブ実行可能ファイルのネイティブなSSLサポートを有効にします。しかし、手動で設定するべきではありません。この目的のために、以下のような優れた設定プロパティが用意されています。"
 
@@ -192,33 +188,28 @@ msgstr "Agroalコネクションプールエクステンション ( `quarkus-agr
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:86
-#, fuzzy
 msgid "the Amazon Services extension (`quarkus-amazon-*`),"
-msgstr "Mailer エクステンション ( `quarkus-mailer` ) 、"
+msgstr "Amazon Services エクステンション(`quarkus-amazon-*`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:87
-#, fuzzy
 msgid "the Consul Config extension (`quarkus-consul-config`),"
-msgstr "Neo4j エクステンション ( `quarkus-neo4j` ) 、"
+msgstr "Consul Config エクステンション(`quarkus-consul-config`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:88
-#, fuzzy
 msgid "the Elasticsearch client extensions (`quarkus-elasticsearch-rest-client` and `quarkus-elasticsearch-rest-high-level-client`) and thus the Hibernate Search Elasticsearch extension (`quarkus-hibernate-search-orm-elasticsearch`),"
-msgstr "のElasticsearchクライアントエクステンション( `quarkus-elasticsearch-rest-client` と `quarkus-elasticsearch-rest-high-level-client`)と、Hibernate SearchのElasticsearchエクステンション( `quarkus-hibernate-search-orm-elasticsearch`)を使用しています。"
+msgstr "Elasticsearch client エクステンション(`quarkus-elasticsearch-rest-client` and `quarkus-elasticsearch-rest-high-level-client`) と Hibernate Search Elasticsearch エクステンション(`quarkus-hibernate-search-orm-elasticsearch`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:89
-#, fuzzy
 msgid "the Elytron Security OAuth2 extension (`quarkus-elytron-security-oauth2`),"
-msgstr "Kubernetes クライアントエクステンション ( `quarkus-kubernetes-client` )、"
+msgstr "Elytron Security OAuth2 エクステンション(`quarkus-elytron-security-oauth2`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:90
-#, fuzzy
 msgid "the gRPC extension (`quarkus-grpc`),"
-msgstr "Jaeger エクステンション ( `quarkus-jaeger` )、"
+msgstr "gRPC エクステンション(`quarkus-grpc`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:91
@@ -237,21 +228,18 @@ msgstr "JGit エクステンション ( `quarkus-jgit` )、"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:94
-#, fuzzy
 msgid "the JSch extension (`quarkus-jsch`),"
-msgstr "JGit エクステンション ( `quarkus-jgit` )、"
+msgstr "JSch エクステンション(`quarkus-jsch`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:95
-#, fuzzy
 msgid "the Kafka Client extension (`quarkus-kafka-client`), if Apicurio Registry 2.x Avro library is used"
-msgstr "Apicurio Registry 2.xのAvroライブラリが使用されている場合、Kafka Client extension ( `quarkus-kafka-client`)。"
+msgstr "Apicurio Registry 2.xのAvroライブラリが使用されている場合、Kafka Client エクステンション( `quarkus-kafka-client`)。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:96
-#, fuzzy
 msgid "the Keycloak Authorization extension (`quarkus-keycloak-authorization`),"
-msgstr "Redis クライアントエクステンション ( `quarkus-redis-client` ) 、"
+msgstr "Keycloak Authorization エクステンション(`quarkus-keycloak-authorization`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:97
@@ -260,9 +248,8 @@ msgstr "Kubernetes クライアントエクステンション ( `quarkus-kuberne
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:98
-#, fuzzy
 msgid "the Logging Sentry extension (`quarkus-logging-sentry`),"
-msgstr "JGit エクステンション ( `quarkus-jgit` )、"
+msgstr "Logging Sentry エクステンション(`quarkus-logging-sentry`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:99
@@ -271,9 +258,8 @@ msgstr "Mailer エクステンション ( `quarkus-mailer` ) 、"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:100
-#, fuzzy
 msgid "the MongoDB client extension (`quarkus-mongodb-client`),"
-msgstr "Redis クライアントエクステンション ( `quarkus-redis-client` ) 、"
+msgstr "MongoDB client エクステンション(`quarkus-mongodb-client`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:101
@@ -282,15 +268,13 @@ msgstr "Neo4j エクステンション ( `quarkus-neo4j` ) 、"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:102
-#, fuzzy
 msgid "the OIDC and OIDC client extensions (`quarkus-oidc` and `quarkus-oidc-client`),"
-msgstr "Cassandraクライアントエクステンション ( `cassandra-quarkus-client` ) 、"
+msgstr "OIDC とOIDC client エクステンション(`quarkus-oidc` and `quarkus-oidc-client`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:103
-#, fuzzy
 msgid "the Reactive client for IBM DB2 extension (`quarkus-reactive-db2-client`),"
-msgstr "DB2 エクステンションの Reactive クライアント ( `quarkus-reactive-db2-client` ) 、"
+msgstr "IBM DB2 エクステンションのReactiveクライアント(`quarkus-reactive-db2-client`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:104
@@ -304,9 +288,8 @@ msgstr "MySQL エクステンションの Reactive クライアント ( `quarkus
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:106
-#, fuzzy
 msgid "the Reactive client for Microsoft SQL Server extension (`quarkus-reactive-mssql-client`),"
-msgstr "MySQL エクステンションの Reactive クライアント ( `quarkus-reactive-mysql-client` ) 、"
+msgstr "Reactive client for Microsoft SQL Server エクステンション(`quarkus-reactive-mssql-client`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:107
@@ -315,27 +298,23 @@ msgstr "Redis クライアントエクステンション ( `quarkus-redis-client
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:108
-#, fuzzy
 msgid "the REST Client extension (`quarkus-rest-client`),"
-msgstr "Redis クライアントエクステンション ( `quarkus-redis-client` ) 、"
+msgstr "REST Client エクステンション(`quarkus-rest-client`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:109
-#, fuzzy
 msgid "the REST Client Reactive extension (`quarkus-rest-client-reactive`),"
-msgstr "Redis クライアントエクステンション ( `quarkus-redis-client` ) 、"
+msgstr "REST Client Reactive エクステンション(`quarkus-rest-client-reactive`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:110
-#, fuzzy
 msgid "the Spring Cloud Config client extension (`quarkus-spring-cloud-config-client`),"
-msgstr "Redis クライアントエクステンション ( `quarkus-redis-client` ) 、"
+msgstr "Spring Cloud Config client エクステンション(`quarkus-spring-cloud-config-client`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:111
-#, fuzzy
 msgid "the Vault extension (`quarkus-vault`),"
-msgstr "Mailer エクステンション ( `quarkus-mailer` ) 、"
+msgstr "Vault エクステンション(`quarkus-vault`),"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:112
@@ -344,13 +323,11 @@ msgstr "Cassandraクライアントエクステンション ( `cassandra-quarkus
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:114
-#, fuzzy
 msgid "As long as you have one of these extensions in your project, the SSL support will be enabled by default."
 msgstr "これらのエクステンションのいずれかがプロジェクトに含まれている限り、SSLサポートはデフォルトで有効になります。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:116
-#, fuzzy
 msgid "If you are not using any of them and you want to enable SSL support anyway, please add the following to your configuration:"
 msgstr "いずれも使用しておらず、とにかくSSLサポートを有効にしたい場合は、以下を設定に追加してください。"
 
@@ -434,15 +411,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:165
-#, fuzzy
 msgid "and since http://stage.code.quarkus.io/api responds with 302 status code we need to also skip the tests with `-DskipTests`."
 msgstr "また、 http://stage.code.quarkus.io/api は 302 ステータスコードで応答するので、 `-DskipTests` のテストもスキップする必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:167
-#, fuzzy
 msgid "Now we can build again:"
-msgstr "そして、またビルドしてみましょう:"
+msgstr "ではまたビルドしてみましょう:"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:173
@@ -513,73 +488,62 @@ msgstr "TrustStoreのパス"
 
 #. type: delimited block =
 #: upstream/_guides/native-and-ssl.adoc:220
-#, fuzzy
 msgid "This behavior is new to GraalVM 21.3+."
 msgstr "この動作は、GraalVM 21.3+の新機能です。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:223
-#, fuzzy
 msgid "GraalVM supports both build time and runtime certificate configuration."
-msgstr "GraalVMは、ビルドタイムとランタイムの両方の証明書設定をサポートしています。"
+msgstr "GraalVMは、ビルド時と実行時の両方の証明書設定をサポートしています。"
 
 #. type: Title ===
 #: upstream/_guides/native-and-ssl.adoc:224
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Build time configuration"
-msgstr "ビルドタイムの設定"
+msgstr "ビルド時設定"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:228
-#, fuzzy
 msgid "The build time approach favors the principle of \"immutable security\" where the appropriate certificates are added at build time, and can never be changed afterward.  This guarantees that the list of valid certificates cannot be tampered with when the application gets deployed in production."
-msgstr "ビルドタイムアプローチでは、適切な証明書がビルド時に追加され、その後は決して変更できないという「不変のセキュリティ」の原則を採用しています。これにより、アプリケーションが本番環境にデプロイされる際に、有効な証明書のリストが改ざんされないことが保証されます。"
+msgstr "ビルド時アプローチでは、適切な証明書がビルド時に追加され、その後は決して変更できないという「不変のセキュリティ」の原則を採用しています。これにより、アプリケーションが本番環境にデプロイされる際に、有効な証明書のリストが改ざんされないことが保証されます。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:230
-#, fuzzy
 msgid "However, this comes with a few drawbacks:"
 msgstr "しかし、これにはいくつかの欠点があります。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:232
-#, fuzzy
 msgid "If you use the same executable in all environments, and a certificate expires, the application needs to be rebuilt, and redeployed into production with the new certificate, which is an inconvenience."
 msgstr "すべての環境で同じ実行ファイルを使用している場合、証明書の有効期限が切れると、アプリケーションを再構築し、新しい証明書を使って本番環境に再展開する必要があり、不便です。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:233
-#, fuzzy
 msgid "Even worse, if a certificate gets revoked because of a security breach, all applications that embed this certificate need to be rebuilt and redeployed in a timely manner."
 msgstr "さらに悪いことに、セキュリティ侵害が原因で証明書が失効した場合、その証明書を組み込んだすべてのアプリケーションを適時に再構築し、再展開する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:234
-#, fuzzy
 msgid "This requires also to add into the application all certificates for all environments (e.g. DEV, TEST, PROD), which means that a certificate that is required for DEV but should not be used elsewhere, will make its way anyway in production."
 msgstr "このため、すべての環境（DEV、TEST、PRODなど）に対応したすべての証明書をアプリケーションに追加する必要があります。つまり、DEVでは必要だが他の場所では使用してはいけない証明書が、本番環境ではそのまま使用されてしまうということです。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:235
-#, fuzzy
 msgid "Providing all certificates at build time complicates the CI, specifically in dynamic environments such as Kubernetes where valid certificates are provided by the platform in the `/var/run/secrets/kubernetes.io/serviceaccount/ca.crt` PEM file."
 msgstr "ビルド時にすべての証明書を提供すると、CIが複雑になります。特に、Kubernetesのような動的な環境では、有効な証明書がプラットフォームから `/var/run/secrets/kubernetes.io/serviceaccount/ca.crt` PEMファイルで提供されます。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:236
-#, fuzzy
 msgid "Lastly, this does not play well with third party software that do not provide a dedicated build for each customer environment."
 msgstr "最後に、お客様の環境に合わせて専用のビルドを提供しないサードパーティのソフトウェアとは相性が良くありません。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:239
-#, fuzzy
 msgid "Creating a native executable using build time certificates essentially means that the root certificates are fixed at image build time, based on the certificate configuration used at build time (which for Quarkus means when you perform a build having `quarkus.package.type=native` set).  This avoids shipping a `cacerts` file or requiring a system property be set in order to set up root certificates that are provided by the OS where the binary runs."
 msgstr "ビルド時の証明書を使用してネイティブ実行可能ファイルを作成することは、基本的に、ビルド時（Quarkusでは、 `quarkus.package.type=native` が設定されているビルドの実行時を意味します）に使用される証明書構成に基づいて、イメージのビルド時にルート証明書が固定されることを意味します。これにより、バイナリを実行するOSによって提供されるルート証明書を設定するために、 `cacerts` ファイルを出荷したり、システムプロパティを設定する必要がなくなります。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:243
-#, fuzzy
 msgid "In this situation, system properties such as `javax.net.ssl.trustStore` do not have an effect at run time, so when the defaults need to be changed, these system properties must be provided at image build time.  The easiest way to do so is by setting `quarkus.native.additional-build-args`. For example:"
 msgstr "このような状況では、 `javax.net.ssl.trustStore` のようなシステムプロパティは実行時には効果がないので、デフォルトを変更する必要がある場合には、これらのシステムプロパティをイメージのビルド時に提供する必要があります。最も簡単な方法は、 `quarkus.native.additional-build-args` を設定することです。例えば、以下のようになります。"
 
@@ -591,21 +555,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:251
-#, fuzzy
 msgid "will ensure that the certificates of `/tmp/mycerts` are baked into the native binary and used *in addition* to the default cacerts.  The file containing the custom TrustStore does *not* (and probably should not) have to be present at runtime as its content has been baked into the native binary."
 msgstr "上記は `/tmp/mycerts` の証明書がネイティブバイナリーに焼き込まれ、デフォルトの cacerts に *加えて* 使用されることを保証します。"
 
 #. type: Title ===
 #: upstream/_guides/native-and-ssl.adoc:252
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Run time configuration"
-msgstr "ランタイム設定"
+msgstr "実行時設定"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:255
-#, fuzzy
 msgid "Using the runtime certificate configuration, supported by GraalVM since 21.3 does not require any special or additional configuration compared to regular java programs or Quarkus in jvm mode. See the https://www.graalvm.org/reference-manual/native-image/CertificateManagement/#run-time-options[GraalVM documentation] for more information."
-msgstr "21.3以降のGraalVMでサポートされているランタイム証明書の設定を使用しても、通常のJavaプログラムやjvmモードのQuarkusと比較して、特別な設定や追加の設定は必要ありません。詳しくは、 link:https://www.graalvm.org/reference-manual/native-image/CertificateManagement/#run-time-options[GraalVMのドキュメント]をご覧ください。"
+msgstr "21.3以降のGraalVMでサポートされている実行時証明書の設定を使用しても、通常のJavaプログラムやjvmモードのQuarkusと比較して、特別な設定や追加の設定は必要ありません。詳しくは、 link:https://www.graalvm.org/reference-manual/native-image/CertificateManagement/#run-time-options[GraalVMのドキュメント]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/native-and-ssl.adoc:257
@@ -626,7 +588,6 @@ msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:264
-#, fuzzy
 msgid "We make building native executable using SSL easy, and provide several options to cope well with different types of security requirements."
 msgstr "私たちは、SSLを使ったネイティブ実行可能ファイルの構築を容易にし、様々なタイプのセキュリティ要件に対処するための複数のオプションを提供します。"
 
