--- a/l10n/po/ja_JP/_versions/2.2/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/native-and-ssl.adoc.po
@@ -167,7 +167,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:76
 msgid "They enable the native SSL support for your native executable.  But you should not set them manually, we have a nice configuration property for this purpose as described below."
-msgstr ""
+msgstr "これらは、あなたのネイティブ実行可能ファイルのネイティブなSSLサポートを有効にします。しかし、手動で設定するべきではありません。この目的のために、以下のような優れた設定プロパティが用意されています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:78
@@ -182,22 +182,22 @@ msgstr "Agroalコネクションプールエクステンション ( `quarkus-agr
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:81
 msgid "the Amazon Services extension (`quarkus-amazon-*`),"
-msgstr ""
+msgstr "Amazon Services エクステンション(`quarkus-amazon-*`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:82
 msgid "the Consul Config extension (`quarkus-consul-config`),"
-msgstr ""
+msgstr "Consul Config エクステンション(`quarkus-consul-config`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:83
 msgid "the Elasticsearch client extensions (`quarkus-elasticsearch-rest-client` and `quarkus-elasticsearch-rest-high-level-client`) and thus the Hibernate Search Elasticsearch extension (`quarkus-hibernate-search-orm-elasticsearch`),"
-msgstr ""
+msgstr "Elasticsearch client エクステンション(`quarkus-elasticsearch-rest-client` and `quarkus-elasticsearch-rest-high-level-client`) と Hibernate Search Elasticsearch エクステンション(`quarkus-hibernate-search-orm-elasticsearch`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:84
 msgid "the Elytron Security OAuth2 extension (`quarkus-elytron-security-oauth2`),"
-msgstr ""
+msgstr "Elytron Security OAuth2 エクステンション(`quarkus-elytron-security-oauth2`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:85
@@ -222,17 +222,17 @@ msgstr "JGit エクステンション ( `quarkus-jgit` )、"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:89
 msgid "the JSch extension (`quarkus-jsch`),"
-msgstr ""
+msgstr "JSch エクステンション(`quarkus-jsch`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:90
 msgid "the Kafka Client extension (`quarkus-kafka-client`), if Apicurio Registry 2.x Avro library is used"
-msgstr ""
+msgstr "Apicurio Registry 2.xのAvroライブラリが使用されている場合、Kafka Client エクステンション( `quarkus-kafka-client`)。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:91
 msgid "the Keycloak Authorization extension (`quarkus-keycloak-authorization`),"
-msgstr ""
+msgstr "Keycloak Authorization エクステンション(`quarkus-keycloak-authorization`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:92
@@ -242,7 +242,7 @@ msgstr "Kubernetes クライアントエクステンション ( `quarkus-kuberne
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:93
 msgid "the Logging Sentry extension (`quarkus-logging-sentry`),"
-msgstr ""
+msgstr "Logging Sentry エクステンション(`quarkus-logging-sentry`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:94
@@ -252,7 +252,7 @@ msgstr "Mailer エクステンション ( `quarkus-mailer` ) 、"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:95
 msgid "the MongoDB client extension (`quarkus-mongodb-client`),"
-msgstr ""
+msgstr "MongoDB client エクステンション(`quarkus-mongodb-client`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:96
@@ -262,12 +262,12 @@ msgstr "Neo4j エクステンション ( `quarkus-neo4j` ) 、"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:97
 msgid "the OIDC and OIDC client extensions (`quarkus-oidc` and `quarkus-oidc-client`),"
-msgstr ""
+msgstr "OIDC とOIDC client エクステンション(`quarkus-oidc` and `quarkus-oidc-client`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:98
 msgid "the Reactive client for IBM DB2 extension (`quarkus-reactive-db2-client`),"
-msgstr ""
+msgstr "IBM DB2 エクステンションのReactiveクライアント(`quarkus-reactive-db2-client`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:99
@@ -292,22 +292,22 @@ msgstr "Redis クライアントエクステンション ( `quarkus-redis-client
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:103
 msgid "the REST Client extension (`quarkus-rest-client`),"
-msgstr ""
+msgstr "REST Client エクステンション(`quarkus-rest-client`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:104
 msgid "the REST Client Reactive extension (`quarkus-rest-client-reactive`),"
-msgstr ""
+msgstr "REST Client Reactive エクステンション(`quarkus-rest-client-reactive`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:105
 msgid "the Spring Cloud Config client extension (`quarkus-spring-cloud-config-client`),"
-msgstr ""
+msgstr "Spring Cloud Config client エクステンション(`quarkus-spring-cloud-config-client`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:106
 msgid "the Vault extension (`quarkus-vault`),"
-msgstr ""
+msgstr "Vault エクステンション(`quarkus-vault`),"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:107
@@ -317,12 +317,12 @@ msgstr "Cassandraクライアントエクステンション ( `cassandra-quarkus
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:109
 msgid "As long as you have one of these extensions in your project, the SSL support will be enabled by default."
-msgstr ""
+msgstr "これらのエクステンションのいずれかがプロジェクトに含まれている限り、SSLサポートはデフォルトで有効になります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:111
 msgid "If you are not using any of them and you want to enable SSL support anyway, please add the following to your configuration:"
-msgstr ""
+msgstr "いずれも使用しておらず、とにかくSSLサポートを有効にしたい場合は、以下を設定に追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:115
