--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -1378,12 +1378,12 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:673
 #, no-wrap
 msgid "Cross Origin Resource Sharing"
-msgstr ""
+msgstr "クロスオリジンリソース共有"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:676
 msgid "If you plan to consume this application from a Single Page Application running on a different domain, you will need to configure CORS (Cross-Origin Resource Sharing). Please read the xref:http-reference.adoc#cors-filter[HTTP CORS documentation] for more details."
-msgstr ""
+msgstr "別のドメインで動作する Single Page Application からこのアプリケーションを利用する場合は、CORS (Cross-Origin Resource Sharing) を設定する必要があります。詳細については、 link:http-reference.html#cors-filter[HTTP CORSのドキュメント]を参照してください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:677
