--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
@@ -1035,7 +1035,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect.adoc:541
 #, no-wrap
 msgid "Cross Origin Resource Sharing"
-msgstr ""
+msgstr "クロスオリジンリソース共有"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect.adoc:544
