--- a/l10n/po/ja_JP/_versions/2.2/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/openapi-swaggerui.adoc.po
@@ -345,7 +345,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:180
 msgid "Quarkus provides the https://github.com/smallrye/smallrye-open-api/[Smallrye OpenAPI] extension compliant with the https://github.com/eclipse/microprofile-open-api/[MicroProfile OpenAPI] specification in order to generate your API https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.0.md[OpenAPI v3 specification]."
-msgstr ""
+msgstr "Quarkusでは、APIの link:https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.0.md[OpenAPI v3仕様]を生成するために、 link:https://github.com/eclipse/microprofile-open-api/[MicroProfile OpenAPI]仕様に準拠した link:https://github.com/smallrye/smallrye-open-api/[Smallrye OpenAPI]エクステンションを提供しています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:182
@@ -496,7 +496,7 @@ msgstr "ライセンス"
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:279
 msgid "All of this information (and more) can be included in your Java code by using appropriate OpenAPI annotations on a JAX-RS `Application` class.  Because a JAX-RS `Application` class is not required in Quarkus, you will likely have to create one.  It can simply be an empty class that extends `javax.ws.rs.core.Application`.  This empty class can then be annotated with various OpenAPI annotations such as `@OpenAPIDefinition`.  For example:"
-msgstr ""
+msgstr "JAX-RS `Application` クラスで適切なOpenAPIアノテーションを使用することで、これらの情報（およびそれ以上）をJavaコードに含めることができます。JAX-RS `Application` クラスはQuarkusでは必須ではないため、おそらく作成する必要があるでしょう。 `javax.ws.rs.core.Application` を拡張した空のクラスを作成することができます。この空のクラスは、 `@OpenAPIDefinition` のようなさまざまなOpenAPIアノテーションでアノテーションすることができます。例えば、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:300
@@ -525,12 +525,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:304
 msgid "Another option, that is a feature provided by SmallRye and not part of the specification, is to use configuration to add this global API information.  This way, you do not need to have a JAX-RS `Application` class, and you can name the API differently per environment."
-msgstr ""
+msgstr "また、SmallRyeが提供する機能であり、仕様には含まれていませんが、コンフィギュレーションを使用してこのグローバルAPI情報を追加するという方法もあります。この方法では、JAX-RS `Application` クラスを用意する必要はなく、環境ごとに異なるAPI名を付けることができます。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:306
 msgid "For example, add the following to your `application.properties`:"
-msgstr ""
+msgstr "例えば、次を `application.properties` に追加して下さい。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:320
@@ -552,7 +552,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:323
 msgid "This will give you similar information as the `@OpenAPIDefinition` example above."
-msgstr ""
+msgstr "これにより、上記の `@OpenAPIDefinition` の例と同様の情報が得られます。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:324
@@ -710,7 +710,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:417
 msgid "This might be useful if your API goes through a Gateway that needs a certain version."
-msgstr ""
+msgstr "これは、あなたのAPIが特定のバージョンを必要とするゲートウェイを経由する場合に便利です。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:418
@@ -721,7 +721,7 @@ msgstr "操作IDの自動生成"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:422
 msgid "The https://swagger.io/docs/specification/paths-and-operations/[Operation Id] can be set using the `@Operation` annotation, and is in many cases useful when using a tool to generate a client stub from the schema.  The Operation Id is typically used for the method name in the client stub. In SmallRye, you can auto-generate this Operation Id by using the following configuration:"
-msgstr ""
+msgstr "link:https://swagger.io/docs/specification/paths-and-operations/[Operation Id]は `@Operation` アノテーションを使って設定することができ、ツールを使ってスキーマからクライアント・スタブを生成する際に多くの場合役立ちます。Operation Idは通常、クライアントスタブのメソッド名に使用されます。SmallRyeでは、以下のような設定でこのOperation Idを自動生成することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:426
@@ -732,7 +732,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:429
 msgid "Now you do not need to use the `@Operation` annotation. While generating the document, the method name will be used for the Operation Id."
-msgstr ""
+msgstr "これで、 `@Operation` アノテーションを使用する必要はありません。ドキュメントの生成時には、メソッド名がオペレーションIDとして使用されます。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:430
@@ -802,7 +802,7 @@ msgstr "APIを構築する際、開発者は素早くテストしたいと考え
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:452
 msgid "The Quarkus `smallrye-openapi` extension comes with a `swagger-ui` extension embedding a properly configured Swagger UI page."
-msgstr ""
+msgstr "Quarkus `smallrye-openapi` エクステンションには、適切に設定されたSwagger UIページを埋め込む `swagger-ui` エクステンションが付属しています。"
 
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:456
@@ -844,7 +844,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:480
 msgid "The value `/` is not allowed as it blocks the application from serving anything else.  A value prefixed with '/' makes it absolute and not relative."
-msgstr ""
+msgstr "値 `/` は、アプリケーションが他のサービスを提供できないようにブロックするため、許可されません。値の前に「/」を付けると、相対値ではなく絶対値になります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/openapi-swaggerui.adoc:490
