Add some translations

--- a/l10n/po/ja_JP/_includes/about.html.po
+++ b/l10n/po/ja_JP/_includes/about.html.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-12-03 16:01+0900\n"
+"PO-Revision-Date: 2022-04-12 10:57+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/about.html:4
@@ -63,7 +63,6 @@ msgstr "<a href=\"/developer-joy/\">開発者満足について詳しく知る</
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/about.html:18
-#, fuzzy
 msgid "Kubernetes-native"
 msgstr "Kubernetes-native"
 
@@ -74,9 +73,8 @@ msgstr "QuarkusはKubernetesのためにゼロから構築されており、Kube
 
 #. type: Content of: <div><div><div><img><p><br>
 #: upstream/_includes/about.html:19
-#, fuzzy
 msgid "<a href=\"/kubernetes-native/\">Learn more about Kubernetes-native</a>"
-msgstr "<a href=\"/continuum/\">リアクティブについて詳しく知る</a>"
+msgstr "<a href=\"/kubernetes-native/\">Kubernetes-nativeについて詳しく知る</a>"
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/about.html:23
