--- a/l10n/po/ja_JP/_data/getstarted-videos.yaml.po
+++ b/l10n/po/ja_JP/_data/getstarted-videos.yaml.po
@@ -3,29 +3,29 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 14:13+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-12 10:56+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Hash Value - Key: headline
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Videos"
 msgstr "ビデオ"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Gunnar Morling"
-msgstr "ガンナー・モーリング"
+msgstr "Gunnar Morling"
 
 #. type: Hash Value - Key: date
 #: >links>
@@ -53,9 +53,9 @@ msgstr "Quarkusを使ったKafka Streams"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Burr Sutter, Georgios Andrianakis"
-msgstr "バー・サッター、ゲオルギオス・アンドリアナキス"
+msgstr "Burr Sutter, Georgios Andrianakis"
 
 #. type: Hash Value - Key: date
 #: >links>
@@ -83,9 +83,9 @@ msgstr "QuarkusのKubernetesネイティブなSpringアプリ"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Daniel Oh"
-msgstr "ダニエル・オー"
+msgstr "Daniel Oh"
 
 #. type: Hash Value - Key: date
 #: >links>
@@ -113,7 +113,7 @@ msgstr "Quarkus on Kubernetes"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "David Kwon"
 msgstr "David Kwon"
 
