Add some translations

--- a/l10n/po/ja_JP/_guides/includes/devtools/prerequisites.adoc.po
+++ b/l10n/po/ja_JP/_guides/includes/devtools/prerequisites.adoc.po
@@ -3,81 +3,70 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-08 17:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-12 11:08+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:2
-#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr "このガイドを完成させるためには"
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:5
-#, fuzzy
 msgid "Roughly {prerequisites-time}"
-msgstr "大まかな{前提条件-時間}。"
+msgstr "ざっと {prerequisites-time}"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:8
-#, fuzzy
 msgid "Roughly 15 minutes"
 msgstr "約15分"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:10
-#, fuzzy
 msgid "An IDE"
 msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:12
-#, fuzzy
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 11+をインストールし、 `JAVA_HOME` を適切に設定する。"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:14
-#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr "Apache Maven {maven-version}。"
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:17
-#, fuzzy
 msgid "A working container runtime (Docker or Podman)"
-msgstr "動作するコンテナランタイム（DockerまたはPodman）"
+msgstr "動作するコンテナーランタイム(Docker, podman)"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:20
-#, fuzzy
 msgid "Docker and Docker Compose"
 msgstr "DockerとDocker Compose"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:23
-#, fuzzy
 msgid "Optionally the xref:cli-tooling.adoc[Quarkus CLI] if you want to use it"
-msgstr "オプションとして、 link:cli-tooling.html[QuarkusのCLI]を使用したい場合は"
+msgstr "使用したい場合、 link:cli-tooling.html[Quarkus CLI]"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:27
-#, fuzzy
 msgid "Optionally Mandrel or GraalVM installed and xref:building-native-image.adoc#configuring-graalvm[configured appropriately] if you want to build a native executable (or Docker if you use a native container build)"
-msgstr "必要に応じて、MandrelまたはGraalVMをインストールし、ネイティブ実行可能ファイルをビルドしたい場合は link:building-native-image.html#configuring-graalvm[適切に設定]します（ネイティブなコンテナビルドを使用する場合はDockerを使用します）。"
+msgstr "ネイティブ実行可能ファイルをビルドしたい場合、MandrelまたはGraalVM（あるいはネイティブなコンテナビルドを使用する場合はDocker）をインストールし、 link:building-native-image.html#configuring-graalvm[適切に設定]していること"
 
 #. type: Plain text
 #: upstream/_guides/includes/devtools/prerequisites.adoc:30
-#, fuzzy
 msgid "Mandrel or GraalVM installed and xref:building-native-image.adoc#configuring-graalvm[configured appropriately]"
-msgstr "MandrelまたはGraalVMのインストールと link:building-native-image.html#configuring-graalvm[適切な設定]"
+msgstr "MandrelまたはGraalVMがインストールされ、 link:building-native-image.html#configuring-graalvm[適切に設定されていること]"
