--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-11-14 23:43+0900\n"
+"PO-Revision-Date: 2022-04-12 11:25+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -82,7 +82,6 @@ msgstr "Eclipse"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:40
-#, fuzzy
 msgid "To be able to make use of visual modelling of your processes, download Eclipse IDE and install from Marketplace Eclipse BPMN2 Modeller plugin (with jBPM Runtime Extension)"
 msgstr "プロセスのビジュアル・モデリングを利用するには、Eclipse IDEをダウンロードし、MarketplaceからEclipse BPMN2 Modellerプラグイン（with jBPM Runtime Extension）をインストールします。"
 
@@ -94,7 +93,6 @@ msgstr "その他のプラットフォーム"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:44
-#, fuzzy
 msgid "You can go to https://kiegroup.github.io/kogito-online/#/download[Business Modeler Hub] to download the latest platforms supported for the https://github.com/kiegroup/kogito-tooling/releases[Kogito tooling releases]."
 msgstr "link:https://kiegroup.github.io/kogito-online/#/download[Business Modeler Hub]では、 link:https://github.com/kiegroup/kogito-tooling/releases[Kogito toolingリリース]でサポートされている最新のプラットフォームをダウンロードすることができます。"
 
@@ -180,9 +178,8 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:90
-#, fuzzy
 msgid "This command generates a Maven project, importing the `kogito` extension that comes with all needed dependencies and configuration to equip your application with business automation.  It also imports the `resteasy-jackson` extension that is needed for Kogito to expose REST services."
-msgstr "このコマンドはMavenプロジェクトを生成し、アプリケーションにビジネス・オートメーションを装備するために必要な依存関係と構成をすべて備えた `kogito` 拡張をインポートします。また、KogitoがRESTサービスを公開するのに必要な `resteasy-jackson` 拡張をインポートします。"
+msgstr "このコマンドはMavenプロジェクトを生成し、アプリケーションにビジネス・オートメーションを装備するために必要な依存関係と設定をすべて備えた `kogito` エクステンションをインポートします。また、KogitoがRESTサービスを公開するのに必要な `resteasy-jackson` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:93
@@ -474,9 +471,8 @@ msgstr "そして、次のようになるはずです。"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:232
-#, fuzzy
 msgid "image:kogito-guide-screenshot.png[alt=Process definition]"
-msgstr "image:kogito-guide-screenshot.png[alt=Process definition]"
+msgstr "image:kogito-guide-screenshot.png[alt=プロセス定義]"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:235
@@ -586,15 +582,14 @@ msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_guides/kogito.adoc:259
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running in Dev Mode"
 msgstr "JVMモードでの実行"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:262
-#, fuzzy
 msgid "To run the microservice in dev mode, use:"
-msgstr "マイクロサービスをdevモードで実行するには"
+msgstr "マイクロサービスをdevモードで実行する場合、次を実行して下さい:"
 
 #. type: Title ===
 #: upstream/_guides/kogito.adoc:265
@@ -641,7 +636,6 @@ msgstr "これは、生成されたバイナリーにランタイム技術が含
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:290
-#, fuzzy
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build a native executable with the following command:"
 msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトでは無効になっています。以下のコマンドでネイティブ実行可能ファイルをビルドしてみましょう。"
 
@@ -939,9 +933,8 @@ msgstr "https://docs.jboss.org/kogito/release/latest/html_single[Kogito Document
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:487
-#, fuzzy
 msgid "xref:kogito-dev-services.adoc[Kogito Dev Services]"
-msgstr "link:kogito-dev-services.html[コギト開発サービス]"
+msgstr "xref:kogito-dev-services.adoc[Kogito Dev Services]"
 
 #~ msgid "To complete this guide, you need:"
 #~ msgstr "このガイドを完成させるには、以下が必要です:"
