Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-27 02:34+0000\n"
+"POT-Creation-Date: 2022-04-12 02:33+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3834,7 +3834,7 @@ msgstr ""
 msgid ""
 "    @RegisterExtension\n"
 "    final static QuarkusDevModeTest test = new QuarkusDevModeTest()\n"
-"            .setArchiveProducer(new Supplier<JavaArchive>() {\n"
+"            .setArchiveProducer(new Supplier<>() {\n"
 "                @Override\n"
 "                public JavaArchive get() {\n"
 "                    return ShrinkWrap.create(JavaArchive.class)   <1>\n"
